--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue-argon-dashboard-2",
+  "name": "creatorku-mvp",
   "version": "3.0.0",
   "private": true,
-  "author": "Creative Tim",
+  "author": "CreatorKu",
   "license": "SEE LICENSE IN <https://www.creative-tim.com/license>",
   "description": "VueJS version of Argon Dashboard 2 by Creative Tim",
   "homepage": "https://demos.creative-tim.com/vue-argon-dashboard/",
